--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
     "name": "shu-frontend-design-system",
     "version": "1.0.3",
     "description": "Front end assets for the SHU design system",
-    "main": "index.js",
+    "main": "scss/index.scss",
     "repository": "git@github.com:madebykind/shu-design-system-base.git",
-    "author": "SHU <dev@madebykind.com>",
+    "author": "SHU / Kind <dev@madebykind.com>",
     "license": "MIT",
     "private": false,
     "scripts": {
         "start": "cross-env BLENDID_CONFIG_PATH=./build yarn run blendid",
         "build": "cross-env NODE_ENV=production BLENDID_CONFIG_PATH=./build yarn run blendid build",
-        "generate-styleguide": "yarn build && fractal build"
+        "generate-styleguide": "yarn build && fractal build",
+        "prepublish": "yarn run build && yarn generate-styleguide"
     },
+    "files": [
+        "dist",
+        "component-library"
+    ],
     "dependencies": {
         "breakpoint-sass": "^2.7.1",
         "enquire.js": "^2.1.6",
