backport latest atom changes from sitecore-frontend

--- a/assets/styles/atoms/meta/meta.config.yml
+++ b/assets/styles/atoms/meta/meta.config.yml
@@ -18,3 +18,9 @@ variants:
       meta:
         message: Meta Text (Tight)
         modifier: meta--tight
+  -
+    name: grey
+    context:
+      meta:
+        message: Meta Text (Grey)
+        modifier: meta--grey
