--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
         "start": "cross-env BLENDID_CONFIG_PATH=./build yarn run blendid",
         "build": "cross-env NODE_ENV=production BLENDID_CONFIG_PATH=./build yarn run blendid build",
         "generate-styleguide": "yarn build && fractal build",
-        "prepublish": "yarn run build && yarn generate-styleguide"
+        "prepublish": "yarn run build && yarn generate-styleguide",
+        "link-design-system-components": "bin/link-design-system-components.bin.js"
+    },
+    "bin": {
+        "link-design-system-components": "./bin/link-design-system-components"
     },
     "dependencies": {
         "breakpoint-sass": "^2.7.1",
+        "colors": "^1.3.3",
         "enquire.js": "^2.1.6",
-        "modularscale-sass": "^3.0.5"
+        "inquirer": "^6.2.2",
+        "jsonfile": "^5.0.0",
+        "modularscale-sass": "^3.0.5",
+        "shelljs": "^0.8.3"
     },
     "devDependencies": {
         "@frctl/fractal": "^1.1.7",
@@ -27,7 +35,7 @@
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
-        "blendid": "^4.4.3",
+        "blendid": "^4.5.0",
         "concurrently": "^3.5.1",
         "cross-env": "^5.2.0",
         "css-loader": "^0.28.7",
