[Added] A featured meta. Relates to WP updates.

--- a/assets/styles/atoms/meta/meta.config.yml
+++ b/assets/styles/atoms/meta/meta.config.yml
@@ -7,6 +7,12 @@ context:
 
 variants:
   -
+    name: featured
+    context:
+      meta:
+        message: Meta Text (Featured)
+        modifier: meta--featured
+  -
     name: highlight
     context:
       meta:
