--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "eslint-plugin-html": "^4.0.0",
         "eslint-plugin-import": "^2.8.0",
         "gulp-theo": "^1.0.0-beta.1",
+        "gulp-watch": "^5.0.1",
         "hygen": "^1.4.9",
         "immutable": "^3.8.2",
         "jest": "^21.2.1",
