--- a/src/components/atoms/list/list.config.yml
+++ b/src/components/atoms/list/list.config.yml
@@ -6,17 +6,20 @@ context:
     message: This is a standard list item
 
 variants:
-
-  -
-    name: Numbered List
+  - name: Numbered List
     context:
       list:
         tag: ol
         message: This is a numbered list item
-  -
-    name: Unstyled List
+  - name: Unstyled List
     context:
       list:
         tag: ul
         modifier: list--unstyled
         message: This is an unstyled list item
+  - name: Inline List
+    context:
+      list:
+        tag: ul
+        modifier: list--inline
+        message: This is an inline list item
